[project]
name = "lsdb"
license = {file = "LICENSE"}
readme = "README.md"
description = "Spatial analysis for extremely large astronomical catalogs using dask"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    # Includes dask[array,dataframe,distributed,diagnostics].
    # dask distributed eases the creation of parallel dask clients.
    # dask diagnostics is required to spin up the dashboard for profiling.
    "dask[complete]>=2025.3.0",
    "deprecated",
    "hats>=0.6.4",
    "nested-pandas>=0.4.7,<0.5.0",
    "pyarrow>=14.0.1",
    "scipy>=1.7.2", # kdtree
    "universal-pathlib>=0.2.2",
]

[project.urls]
source = "https://github.com/astronomy-commons/lsdb"
documentation = "https://lsdb.readthedocs.io/"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "asv", # Used to compute performance benchmarks
    "virtualenv==20.34.0", # Temporary fix to airspeed-velocity/asv#1484
    "jupyter", # Clear notebook output
    "mypy", # Used for static type checking of files
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pytest-mock", # Used to mock objects in tests
]
full = [
    "fsspec[full]", # complete file system specs.
    "ipykernel", # Support for Jupyter notebooks
    "ipywidgets", # useful for tqdm in notebooks.
    "lsst-sphgeom ; sys_platform == 'darwin' or sys_platform == 'linux'", # To handle spherical sky polygons, not available on Windows
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/lsdb/_version.py"

[tool.pytest.ini_options]
markers = [
    "sphgeom: mark tests as having a runtime dependency on lsst-sphgeom",
]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.setuptools.package-data]
lsdb = ["py.typed"]

[tool.coverage.report]
omit = [
    "src/lsdb/_version.py", # auto-generated
]

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110

[tool.coverage.run]
omit=["src/lsdb/_version.py"]

[tool.mypy]
plugins = "pydantic.mypy"
disable_error_code = ["operator"]
